85/ Removed Trinket 5 and turn it into a mod skill.
86/ Added "Disable ring visual" into the configuration setting.
87/ Deleted Chaos Mode.
88/ Nerfed Hybrid Ranger perk.
89/ Deleted Lost In Wonderland perk.
90/ Reworked Trial System and how it functions.
91/ Deleted Weapon Dismantle because it is no longer needed.
92/ Various bug fixes, and fix a rounding error.
93/ Removed Pure Damage player stats from most relic template.
94/ Overall mod clean up.
95/ Deleted Nightmare Mode.
96/ Deleted damage reduction mutation.
97/ Merged Roguelike Overhaul with roguelike mode while still make it enable when player in Boss Rush mode.
98/ Slightly clean up Lootbox.
99/ Clean up the messes created by Merging Roguelike overhaul with roguelike mode.
100/ Added recharged animation for axe.
101/ If player releases LMB during axe recharge animation then the animation will be cancelled and player can attack right away.
102/ Added snow forest into world generation.
103/ Optimized Create_Biome codes for zone to be ignored using smarter chunk generation.
104/ Made small progress on Trial Archer.
105/ Added Trial tile for trial editor.
106/ Nerfed Sniper Rifle, no longer have 50% chance to 1 shot anything, now instead a 0.1% instead, hf.
107/ Significantly buff general shortsword.
108/ Implemented item variant system.
109/ Modified Artifact system to allow for starter item to be added.
110/ Added new Vampire Knives variant.
111/ Modified Gem staff to not be affected by attack speed stats.
112/ Gem staff now have alt-click attack.
113/ Minor buff to Diamond Staff and Ruby Staff.
114/ Modified player starter loot to be less.
115/ Made it so that upon opening a very special skill lootbox, skill UI are automatically open if player has the skill orb.
116/ Added starter item into Fury Emblem.
117/ Buff Heat Ray by increasing the cap from 100 to 200.
118/ Added starter item into Chalice of Royal Gel.
119/ Added new variant for slime staff and volcano sword.